# Green_datacenters

./: .gitignore  LICENSE  Makefile  README.md  datacenter_lcoe.py  model_documentation.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml  pages.yml
docs/: geography.html  index.html  method.html  zero-carbon.html
lcoe/: __init__.py  analysis.py  cli.py  costs.py  dispatch.py  h2system.py  optimize.py  params.py  plots.py  reporting.py  simulate.py  weather.py
output/: cli_eu_training_results.csv  cli_eu_training_results.json  eu_firm_results.csv  eu_firm_results.json  eu_scan_results.json  eu_scan_robustness.json  eu_siting_results.json  eu_tornado_results.json  locations_h2_results.json  locations_re_results.json  locations_real_results.json  locations_results.json  solar_only_results.json  us_firm_results.csv  us_firm_results.json  virginia.npz  zerocarbon_results.json
output/era5/: arizona.npz  california.npz  canary_lanzarote.npz  crete.npz  dover_strait.npz  france.npz  georgia.npz  germany.npz  gran_canaria.npz  iowa.npz  italy.npz  jutland.npz  ohio.npz  poland.npz  portugal_sines.npz  romania_carpathians.npz  (+11 more)
scratch/: plot_comparison.py
sites/: README.md  example_texas.json
tests/: test_model.py
tools/: build_eu_siting.py  build_locations.py  build_locations_h2.py  build_locations_re.py  build_report.py  build_solar_only.py  build_zerocarbon.py  calibrate_synoptic.py  check_doc_tables.py  fetch_era5.py  fetch_era5_grid.py  fetch_locations.py  ingest_weather.py  regen_doc_tables.py  scan_eu.py  scan_robustness.py
